# incub

./: .buckconfig  .clang-format  .gitignore  Default.sublime-keymap  README  README.md  create_vbox.sh  dean_numbers.md  dean_numbers.txt  filetypes.haskell  loganlz.c  vbox_setup  vbox_setup.md
baza/: Makefile  NOTICE  README.md  TODO  btree.c  btree.h  btree_test.c  build.sh  defs.c  defs.h  defs_test.c  disk.c  disk.h  disk_test.c  dstr.c  dstr.h  dstr_test.c  main.c  main_test.c  pque.c  pque.h  pque_test.c  sds.c  sds.h  sds_test.c  stack.c  stack.h  test.c  (+5 more)
ste/: Main.hs  Test.st  Translate.hs  ste.cabal
web/: .gitignore  Makefile  README.md  TODO  TODO.md  build  build.sh  config.json  defs.c  defs.h  get-levigo  main.c  mongo.conf  plan.txt  project.clj  response.c  response.h  runmongo  scgilib.c  scgilib.h  server.go  template.c  template.h  webhome.cabal
web/env/: Init.hs
web/labix.org/v2/mgo/.bzr/repository/: pack-names
web/res/: style.css
web/res/css/: basic.css  error.css
web/res/js/: script.js
web/src/: Base.hs  Data.hs  Main.hs  Pages.hs  Tpl.hst
web/src/data/: dbinit.go  model.go
web/src/server/: auth.go  model.go  server.go  util.go
web/src/templates/: error.html  index.html
web/src/web/: data.clj  datadef.clj  generic.clj  handler.clj  sandbox.clj  view.clj
web/templates/: Index.st  Login.st  Msg.st  Post.st  Test.html  Wallet.st  auth.html  diff.html  home.html  httperror.html  index.html  newuser.html  newuserform.html  quit.html  root.html  test.html  unauthorized.html
web/test/web/test/: handler.clj
web/testsrv/: test.go
(+604 files in other folders)
