Name:         STE
Version:      0.1
Author:       Igor Demura <idemura@yandex.ru>
Copyright:    2012, Igor Demura
License:      BSD3
Maintainer:   idemura@yandex.ru
Stability:    Experimental
Category:     Web
Synopsis:     String template engine
Description:
  String template engine
  
Cabal-version: >= 1.4.0.0
Build-type: Custom

Executable ste
  main-is: Main.hs

  GHC-options: -threaded -O2 -W -fwarn-tabs
  
  Build-Depends:
    base == 4.*
    ,bytestring == 0.9.*
    ,mtl == 2.*
